[package]
name = "dev_logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo ={version = "0.66.2",features = ["anyhow","serve-static","rate-limiter"]}
tokio = { version = "1.36", features = ["macros","rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
config-file = "0.2.3"
serde = "1.0.197"
serde_json = "1.0.114"
anyhow = "1.0.81"
chrono = "0.4.35"
tera = "1.19.1"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true